# healthwatch-ai

./: README.md
infrastructure/kind/: kind-ml-cluster.yaml
infrastructure/kind/models/: README.md
services/health-inference-api/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/health-inference-api/app/: main.py
services/health-inference-api/app/api/: deps.py
services/health-inference-api/app/api/routes/: health.py  predictions.py
services/health-inference-api/app/core/: config.py  exceptions.py  logging.py
services/health-inference-api/app/domain/models/: prediction.py
services/health-inference-api/app/domain/services/: risk_scorer.py
services/health-inference-api/app/infrastructure/ml/: model_loader.py
services/health-inference-api/app/schemas/: prediction.py
